--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ data/raw/*
 # OPTIONAL: Ignore all other .gitkeep files if you don't want to track them elsewhere
 # But don't use this line if you want to track .gitkeep in other folders
 # .gitkeep
+data/final/.gitkeep
